# BelHISFirm-Frontend

./: .env.example  .gitignore  CHANGES-SUMMARY.md  CLAUDE.md  DATA-MODEL.txt  DATASEEDER-COMPLETE.md  DATASEEDER.md  Dockerfile  FIX-APPLIED.md  Makefile  PROJECT-SUMMARY.md  QUICKREF.md  README.md  SEEDER-FIX.md  UPDATES.md  compose-prod.yml  compose-sampo.yml  compose-scob-db.yml  compose-vkg.yml  compose.dev.yml  compose.prod.yml  compose.yml  example.env  setup.sh
.github/workflows/: build-ontop.yml  build-sampo.yml
cache/: README.md  default.conf.template  test_cache.py
custom_components/: package-lock.json  package.json
custom_components/components/GatedExportCSV/: webpack.config.js
custom_components/components/GatedExportCSV/src/: index.jsx
custom_components/components/GatedResultTable/: webpack.config.js
custom_components/components/GatedResultTable/src/: index.jsx
custom_components/components/YearSelectFacet/: webpack.config.js
dataseeder/: .env.example  Dockerfile  README.md  pyproject.toml
dataseeder/src/dataseeder/: __init__.py  config.py  database.py  generator.py  main.py
db/init/: 01-init.sql
sampo/: Dockerfile  compose.yaml  package.json
sampo/configs/: portalConfig.json
sampo/configs/sampo/: filters.js  mappers.js
scob_db_dump/init/: 00_init.sql
varnish/: README.md  default.vcl  test-cache.py
vkg/: Dockerfile
vkg/input/: example-queries.md  lenses.json  mappings.obda  mappings.ttl  ontology.ttl  ontop.properties
vkg/input/ontology/: corporations.ttl  general.ttl  stocks.ttl
vkg/jdbc/: README.md
(+28 files in other folders)
